@startuml

title __WEATHEROBSERVABLE's Class Diagram__\n

  package observer.weather {
    package observer.weatherobservable {
      class CurrentConditionsDisplay {
          ~ observable : Observable
          - temperature : float
          - humidity : float
          + CurrentConditionsDisplay()
          + update()
          + display()
      }
    }
  }
  

  package observer.weather {
    package observer.weatherobservable {
      interface DisplayElement {
          {abstract} + display()
      }
    }
  }
  

  package observer.weather {
    package observer.weatherobservable {
      class ForecastDisplay {
          - currentPressure : float
          - lastPressure : float
          + ForecastDisplay()
          + update()
          + display()
      }
    }
  }
  

  package observer.weather {
    package observer.weatherobservable {
      class HeatIndexDisplay {
          ~ heatIndex : float
          + HeatIndexDisplay()
          + update()
          + display()
      }
    }
  }
  

  package observer.weather {
    package observer.weatherobservable {
      class StatisticsDisplay {
          - maxTemp : float
          - minTemp : float
          - tempSum : float
          - numReadings : int
          + StatisticsDisplay()
          + update()
          + display()
      }
    }
  }
  

  package observer.weather {
    package observer.weatherobservable {
      class WeatherData {
          - temperature : float
          - humidity : float
          - pressure : float
          + WeatherData()
          + measurementsChanged()
          + setMeasurements()
          + getTemperature()
          + getHumidity()
          + getPressure()
      }
    }
  }
  

  package observer.weather {
    package observer.weatherobservable {
      class WeatherStation {
          {static} + main()
      }
    }
  }
  

  package observer.weather {
    package observer.weatherobservable {
      class WeatherStationHeatIndex {
          {static} + main()
      }
    }
  }
  

  CurrentConditionsDisplay -up-|> Observer
  CurrentConditionsDisplay -up-|> DisplayElement
  ForecastDisplay -up-|> Observer
  ForecastDisplay -up-|> DisplayElement
  HeatIndexDisplay -up-|> Observer
  HeatIndexDisplay -up-|> DisplayElement
  StatisticsDisplay -up-|> Observer
  StatisticsDisplay -up-|> DisplayElement
  WeatherData -up-|> Observable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
